@@ -1,4 +1,3 @@
-#!/usr/bin/python
 ########################################################################
 #
 # File:   structured_text.py
